# Sourcehold

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Building.h  GameManager.h  GameMap.h  Startup.h  World.h
src/GUI/: Credits.h  Dialog.h  Ingame.h  Layout.h  MainMenu.h  MenuUtils.h  NarrScreen.h
src/GUI/Widgets/: Button.h  Container.h  LineEdit.h  StaticElement.h  Table.h  Widget.h
src/Parsers/: Gm1File.h  MapFile.h  MlbFile.cpp  MlbFile.h  Parser.cpp  Parser.h  TexFile.h  TgxFile.cpp  TgxFile.h
src/Rendering/: Tileset.h
src/System/: System.h
src/util/: sdl_helpers.h
tests/: CMakeLists.txt  mlb_test.cpp  parser_test.cpp  tgx_test.cpp
tests/data/parser/: mock0.hex
